--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Ceartion de ma premiere et simple API REST avec node js graphikart",
   "main": "server.js",
   "scripts": {
-    "start": " nodemon server.js",
+    "start": "nodemon server.js",
     "test": "npm test"
   },
   "author": "WIBR",
@@ -13,5 +13,9 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "socket.io": "^4.1.3"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.3",
+    "utf-8-validate": "^5.0.5"
   }
 }
